<resources>
    <string name="product_details">ویژگی های محصول</string>
    <string name="others_bought">دیگران هم خریده‌اند</string>
    <string name="comments">نظرات کاربران</string>
    <string name="button_add_to_cart">افزودن به سبد خرید</string>
    <string name="detailed_specs_activity">مشخصات فنی</string>
    <string name="quantity_max">حداکثر</string>
    <string name="navigation_drawer_open">باز کردن</string>
    <string name="navigation_drawer_close">بستن</string>
    <string name="clear">پاک کردن</string>
    <string name="filters">فیلترها</string>
    <string name="no_product_text">کالایی برای نمایش وجود ندارد</string>
    <string name="clear_all_filters">پاک کردن فیلترها</string>
    <string name="password">رمز عبور</string>
    <string name="username">نام کاربری</string>
    <string name="login_error">خطا در ورود</string>
    <string name="logout_success">خروج با موفقیت انجام شد</string>
    <string name="logout_error">خروج با خطا مواجه شد</string>
    <string name="login_empty_user_text_error">نام کاربری نمی‌تواند خالی باشد!</string>
    <string name="login_empty_pass_text_error">رمز عبور نمی‌تواند خالی باشد!</string>
    <string name="no_address">آدرسی برای نمایش وجود ندارد</string>
    <string name="delete_address">حذف آدرس</string>
    <string name="error_connection">خطایی اتفاق افتاد دوباره تلاش کنید</string>
    <string name="orders_list_label">لیست سفارشات</string>
    <string name="order_date">تاریخ ثبت سفارش</string>
    <string name="deliever_to">تحویل گیرنده</string>
    <string name="phone_number">شماره تماس</string>
    <string name="full_price">مبلغ کل</string>
    <string name="payment_method">نحوه پرداخت</string>
    <string name="order_code">کد سفارش</string>
    <string name="order_address">ارسال به</string>
    <string name="billing_address">آدرس صورتحساب</string>
    <string name="order_status">وضعیت</string>
    <string name="order_quantity">تعداد</string>
    <string name="sort">مرتب‌سازی</string>
    <string name="my_orders">سفارش‌های من</string>
    <string name="forgot_password">رمز عبور خود را فراموش کرده‌اید؟</string>
    <string name="create_account">ساخت حساب کاربری جدید</string>
    <string name="signup_title">شماره تلفن و رمز عبور مناسب وارد نمایید</string>
    <string name="signup_subtitle">یک کد، برای تایید این شماره برای شما ارسال خواهد شد</string>
    <string name="signup_continue">ادامه</string>
    <string name="signup_empty_phone_text_error">شماره تلفن نمی‌تولند خالی باشد!</string>
    <string name="signup_empty_pass_text_error">کلمه عبور نمی‌تواند خالی باشد!</string>
    <string name="password_recovery_helper_text">درخواست بازیابی رمز عبور</string>
    <string name="password_recovery_caption">لطفا شماره موبایل خود را وارد نمایید.</string>
    <string name="password_recovery_submit">ارسال درخواست</string>

    <string name="password_recovery_helper_text_validation">کد تایید را وارد نمایید</string>
    <string name="reset_password">تغییر رمز عبور</string>
    <string name="reset_password_limit">رمز عبور شما باید حداقل ۶ حرف باشد</string>
    <string name="password_repeat">تکرار رمز عبور</string>
    <string name="change_password">تغییر رمز عبور</string>
    <string name="password_limit_not_satisfied">طول رمز باید حداقل ۶ حرف باشد</string>
    <string name="passwords_not_match">تکرار کلمه عبور باید با کلمه عبور یکسان باشد</string>
    <string name="error_connecting_to_server">خطا در برقراری ارتباط</string>
    <string name="empty_cart">سبد خرید شما خالی است.</string>
    <string name="show_all">مشاهده همه</string>
    <string name="cart_summary_label">خلاصه سبد</string>
    <string name="error_getting_list">خطا در دریافت اطلاعات</string>
    <string name="double_tap_to_exit">برای خروج  دوباره بازگشت را بزنید</string>
    <string name="product_code_colon">کد کالا:</string>
    <string name="not_in_stock">ناموجود</string>
    <string name="signup_confirm_code">کد تایید را وارد کنید</string>
    <string name="signup_confirm_btn">تایید</string>
    <string name="cart_continue">ادامه فرآیند خرید</string>
    <string name="shipping_address">آدرس پیش‌فرض</string>
    <string name="edit_address">ویرایش آدرس</string>
    <string name="add_new_address">اضافه کردن آدرس جدید</string>
    <string name="empty_edit_text">این فیلد نمی تواند خالی باشد</string>
    <string name="save_success">با موفقیت ذخیره شد</string>
    <string name="save_failure">خطا در ذخیره سازی</string>
    <string name="make_sure_all_filled">لطفا همه فیلد ها را وارد نمایید</string>
    <string name="product_added_to_wish">محصول به لیست علاقه مندی اضافه شد</string>
    <string name="enable_debug">گزارش خطا</string>
    <string name="product_removed_from_wish">محصول مورد نظر از لیست علاقه مندی حذف شد</string>
    <string name="quantity_unit">عدد</string>
    <string name="categories">دسته‌بندی ها</string>
    <string name="empty_search">موردی یافت نشد!</string>
    <string name="search_title">جستجو</string>
    <string name="product_specs">مشخصات فنی</string>
    <string name="product_description">توضیحات محصول</string>
    <string name="delete_cart_item">حذف همه</string>
    <string name="empty_confirm_code_error">کد تایید نمی‌تواند خالی باشد</string>
    <string name="save">ذخیره</string>
    <string name="edit_profile_name">نام و نام‌ خانوادگی</string>
    <string name="edit_profile_username">شماره موبایل</string>
    <string name="edit_profile_email">ایمیل</string>
    <string name="edit_profile_password">رمز عبور</string>
    <string name="product_description_label">توضیحات محصول</string>
    <string name="edit_address_label">ویرایش آدرس</string>
    <string name="total_count_see">مشاهده</string>
    <string name="total_count_products">کالا</string>
    <string name="update">بروزرسانی</string>
    <string name="update_title">بروزرسانی برنامه</string>
    <string name="update_content">بروزرسانی جدیدی برای برنامه وجود دارد.</string>
    <string name="current_version_title">نسخه فعلی</string>
    <string name="update_version_title">نسخه به‌روز</string>
    <string name="button_close">باشه بعدا</string>
    <string name="button_shut_down">بستن برنامه</string>
    <string name="product_prices">قیمت‌های محصول</string>
    <string name="reset_phone_number">تغییر شماره تلفن</string>
    <string name="reset_phone_subtitle">یک پیامک حاوی کد تایید برای شما ارسال می‌شود.</string>
    <string name="reset_phone_number_btn">ارسال</string>
    <string name="cannot_continue_without_file_permission">برای آپلود فایل نیاز به مجوز دسترسی به فایل ها است.</string>
    <string name="edit_mobile_label">ویرایش تلفن همراه</string>
    <string name="notify_in_stock">موجود شد به من اطلاع بده</string>
    <string name="copy_link">کپی کردن لینک</string>
    <string name="copy_html">کپی کردن html</string>
    <string name="copy_clipboard_failed">امکان کپی متن وجود ندارد.</string>
    <string name="copy_clipboard_success">متن در کلیپ بورد کپی شد.</string>
    <string name="affiliate_stats_total">مجموع</string>
    <string name="affiliate_stats_details">جزییات</string>
    <string name="empty_affiliation">موردی برای نمایش وجود ندارد</string>
    <string name="total_point_title">باشگاه مشتریان</string>
    <string name="empty_wish_list">لیست علاقه‌مندی ها خالی است.</string>
    <string name="empty">موردی برای نمایش وجود ندارد</string>
    <string name="similar_products">محصولات مرتبط</string>
    <string name="chart">نمودار تغییرات قیمت</string>
    <string name="price_history">تاریخچه قیمت</string>
    <string name="price_history_detail">مشاهده همه</string>
    <string name="price_history_label">تاریخچه قیمت</string>
    <string name="return_navigation">بازگشت</string>
    <string name="address_delete_success">آدرس با موفقیت حذف شد</string>
    <string name="address_delete_fail">امکان حذف این آدرس وجود ندارد</string>
    <string name="app_version_lable">نسخه:</string>
    <string name="checkout_end_title">پرداخت</string>
    <string name="gallery_fragment">تصاویر محصول</string>
    <string name="comment_recommend">خرید این محصول را توصیه می‌کنم.</string>
    <string name="comment_not_recommend">خرید این محصول را توصیه نمی‌کنم!</string>
    <string name="product_price_title">قیمت واحد</string>
    <string name="retry">تلاش مجدد</string>
    <string name="app_search_hint">"  جستجو در فروشگاه"</string>
    <string name="compare_corner_title">تصویر</string>
    <string name="add_to_compare">اضافه کردن به لیست مقایسه</string>
    <string name="search_filters_hint">جستجو</string>
    <string name="search_history_title">تاریخچه جستجوهای شما</string>
    <string name="comments_title">نظرات محصول</string>
    <string name="report_inappropriate_content">گزارش محتوای نامناسب</string>
    <string name="report_user_name">نام</string>
    <string name="report_reason">دلیل گزارش</string>
    <string name="report_comment_submit">ارسال</string>
    <string name="add_comment_username">نام</string>
    <string name="add_comment_email">ایمیل</string>
    <string name="add_comment_body">متن دیدگاه</string>
    <string name="input_text_connot_be_empty">این فیلد نمی‌تواند خالی باشد.</string>
    <string name="new_comment_title">دیدگاه جدید</string>
    <string name="cannot_vote">شما قبلا رای داده‌اید یا امکان ثبت رای وجود ندارد.</string>
    <string name="comments_subtitle">نظرتان در مورد این کالا را با  دیگران به اشتراک بگذارید</string>
    <string name="comments_subtitle_article">نظرتان در مورد این مطلب را با  دیگران به اشتراک بگذارید</string>
    <string name="login_hint_title">شماره موبایل یا ایمیل خود را وارد کنید</string>
    <string name="validation_code_resent">کد اعتبارسنجی مجددا ارسال شد.</string>
    <string name="cannot_send_validation_code">امکان ارسال مجدد کد وجود ندارد.</string>
    <string name="new_edit_profile_name_title">نام</string>
    <string name="new_edit_profile_surname_title">نام خانوادگی</string>
    <string name="signup_title_new">رمز عبور</string>
    <string name="signup_subtitle_new">لطفا یک رمز عبور مناسب انتخاب کنید</string>
    <string name="username_new">شماره موبایل یا ایمیل</string>
    <string name="login_new">ارسال</string>
    <string name="error_navigating">امکان نمایش صفحه مورد نظر وجود ندارد</string>
</resources>